--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ test:
 
 about:
   home: https://github.com/jinghuazhao/R
-  license: GPL (>= 2)
+  license: GPL-2.0-or-later
   summary: It is designed as an integrated package for genetic data analysis of both population
     and family data. Currently, it contains functions for sample size calculations of
     both population-based and family-based designs, probability of familial disease
