--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,11 +30,20 @@ requirements:
     - {{ posix }}sed               # [win]
     - {{ posix }}coreutils         # [win]
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
+    - r-dplyr
+    - r-gap.datasets
+    - r-ggplot2
+    - r-plotly
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
+    - r-dplyr
+    - r-gap.datasets
+    - r-ggplot2
+    - r-plotly
 
 test:
   commands:
@@ -47,7 +56,8 @@ about:
   summary: It is designed as an integrated package for genetic data analysis of both population and family data. Currently, it contains functions for sample size calculations of both population-based and family-based designs, probability of familial disease aggregation, kinship calculation, statistics in linkage analysis,
     and association analysis involving genetic markers including haplotype analysis with or without environmental covariates.
   license_family: GPL3
-  license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
 
 extra:
   recipe-maintainers:
