--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,27 +21,29 @@ build:
 
 requirements:
   build:
-    - cross-r-base {{ r_base }}  # [build_platform != target_platform]
-    - r-plotly                   # [build_platform != target_platform]
-    - r-gap.datasets             # [build_platform != target_platform]
-    - r-dplyr                    # [build_platform != target_platform]
-    - r-ggplot2                  # [build_platform != target_platform]
+    - cross-r-base {{ r_base }}        # [build_platform != target_platform]
+    - r-plotly                         # [build_platform != target_platform]
+    - r-gap.datasets                   # [build_platform != target_platform]
+    - r-dplyr                          # [build_platform != target_platform]
+    - r-ggplot2                        # [build_platform != target_platform]
+    - r-rdpack                         # [build_platform != target_platform]
     - {{ compiler('c') }}              # [not win]
     - {{ compiler('m2w64_c') }}        # [win]
     - {{ compiler('fortran') }}        # [not win]
     - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ posix }}filesystem        # [win]
+    - {{ posix }}filesystem            # [win]
     - {{ posix }}make
-    - {{ posix }}sed               # [win]
-    - {{ posix }}coreutils         # [win]
-    - {{ posix }}zip               # [win]
-    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
+    - {{ posix }}sed                   # [win]
+    - {{ posix }}coreutils             # [win]
+    - {{ posix }}zip                   # [win]
+    - cross-r-base {{ r_base }}        # [build_platform != target_platform]
   host:
     - r-base
     - r-dplyr
     - r-gap.datasets
     - r-ggplot2
     - r-plotly
+    - r-rdpack
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
@@ -49,6 +51,7 @@ requirements:
     - r-gap.datasets
     - r-ggplot2
     - r-plotly
+    - r-rdpack
 
 test:
   commands:
@@ -63,27 +66,9 @@ about:
   license_family: GPL3
   license_file:
     - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
     - conda-forge/r
     - jenzopr
-
-# Package: gap
-# Version: 1.2.1
-# Date: 2019-6-5
-# Title: Genetic Analysis Package
-# Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and Brian Ripley
-# Maintainer: Jing Hua Zhao <jinghuazhao@hotmail.com>
-# URL: https://github.com/jinghuazhao/R
-# BugReports: https://github.com/jinghuazhao/R/issues
-# Depends: R (>= 2.10)
-# Suggests: BradleyTerry2, MASS, Matrix, MCMCglmm, R2jags, bdsmatrix, calibrate, circlize, coda, coxme, dplyr, foreign, forestplot, gap.datasets, grid, haplo.stats, kinship2, lattice, magic, meta, mets, nlme, pedigree, pedigreemm, plotrix, qqman, regress, reshape, rmeta, rms, survival
-# LazyData: Yes
-# LazyLoad: Yes
-# Description: It is designed as an integrated package for genetic data analysis of both population and family data. Currently, it contains functions for sample size calculations of both population-based and family-based designs, probability of familial disease aggregation, kinship calculation, statistics in linkage analysis, and association analysis involving genetic markers including haplotype analysis with or without environmental covariates.
-# License: GPL (>= 2)
-# NeedsCompilation: yes
-# Repository: CRAN
-# Packaged: 2019-06-05 10:52:26 UTC; jhz22
-# Date/Publication: 2019-06-05 12:00:06 UTC
